--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-flask==2.0.2
-Werkzeug==2.0.3
-jinja2==3.0.2
-flask_login==0.5.0
-flask_migrate==3.1.0
+Flask==2.0.2
+Flask_Login==0.5.0
+Flask_Migrate==3.1.0
+Flask_Minify==0.37
+Flask_SQLAlchemy==2.5.1
+Flask_WTF==1.0.0
+ipython==8.12.3
+ipywidgets==7.6.3
+Jinja2==3.0.2
+joblib==1.3.2
+numpy==1.25.2
+pandas==1.5.1
+scikit_learn==1.4.0
 WTForms==3.0.0
-flask_wtf==1.0.0
-flask_sqlalchemy==2.5.1
-sqlalchemy==1.4.29
-email_validator==1.1.3
-gunicorn==20.1.0
-flask-restx==0.5.1
-python-dotenv==0.19.2
-Flask-Minify==0.37
-
-# flask_mysqldb
-# psycopg2-binary
