--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,11 @@ numpy==1.25.2
 pandas==1.5.1
 scikit_learn==1.4.0
 WTForms==3.0.0
+Werkzeug==2.0.3
+flask_sqlalchemy==2.5.1
+sqlalchemy==1.4.29
+email_validator==1.1.3
+gunicorn==20.1.0
+flask-restx==0.5.1
+python-dotenv==0.19.2
 
